--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bidfolio</title>
+  <title>BID Company Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" href="/assets/favicons/bidicon_180.png" sizes="180x180">
+  <link rel="icon" href="/assets/favicons/bidicon_32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/assets/favicons/bidicon_16.png" sizes="16x16" type="image/png">
+  <link rel="manifest" href="/assets/favicons/manifest.json">
+  <link rel="icon" href="/assets/favicons/bidicon.ico">
+  <meta name="theme-color" content="#72be4a">
+
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
   <app-root></app-root>
